--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ section {
 }
 
 .element.active {
-    width: 80vw;
+    width: 100%;
     opacity: 1;
     transition: opacity 1s, width 2s;
 }
@@ -141,7 +141,7 @@ figure figcaption {
     } 
     
     .img-wrap.active {
-        width: 80vw;
+        width: 100%;
         opacity: 1;
         transition: opacity 0.5s, width 1s;
     }
