--- a/style.css
+++ b/style.css
@@ -28,11 +28,11 @@ section {
 
 .element {
     position: relative;
-    height: 150vh;
+    height: 1000px;
     width: 1px;
     overflow: hidden;
     background-color: white;
-    margin-top: 100px;
+    margin-top: 10px;
 }
 
 .element.active {
@@ -132,7 +132,7 @@ figure figcaption {
 
     .img-wrap {
         position: absolute;
-        top: 30%;
+        top: 20%;
         bottom: 10px;
         height: 50%;
         width: 1px;
@@ -159,7 +159,7 @@ figure figcaption {
 
 .content {
     position: absolute;
-    top: 85%;
+    top: 75%;
     font-size: 1.2em
 } 
 
