--- a/style.css
+++ b/style.css
@@ -188,6 +188,10 @@ h1:before {
     background-color: #666666; /*下線の色*/
 }
 
+.card {
+    margin-bottom: 100px;
+}
+
 .card-body a {
     font-size: 24px;
 } 
