--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;300;400;500;600&display=swap');
-@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css");
+@import url('https://fonts.googleapis.com/css?family=Ubuntu+Mono');
 *{
     margin: 0;
     padding: 0;
@@ -103,7 +103,7 @@ figure figcaption {
     position: absolute;
     top: 15%;
     width: 100%;
-    font-family: 'Amatic SC', cursive;
+    font-family: 'Ubuntu Mono', monospace;
   }
 
   .subtitle{
